<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
         
  <modelVersion>4.0.0</modelVersion>
  <groupId>dev.raghu</groupId>
  <artifactId>HSIDE</artifactId>
  <version>1.0.1</version>
  <packaging>jar</packaging>

  <name>HSIDE</name>

  <dependencies>
    <!-- Add your JARs here -->
    <dependency>
      <groupId>local</groupId>
      <artifactId>rsyntaxtextarea</artifactId>
      <version>3.2.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/rsyntaxtextarea-3.2.0.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>local</groupId>
      <artifactId>swing-toast-notifications</artifactId>
      <version>1.0.4</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/swing-toast-notifications-1.0.4.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>local</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.4.1</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/flatlaf-3.4.1.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>local</groupId>
      <artifactId>emoji-java</artifactId>
      <version>5.1.1</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/emoji-java-5.1.1.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>local</groupId>
      <artifactId>json</artifactId>
      <version>20250517</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/json-20250517.jar</systemPath>
    </dependency>

    <dependency>
      <groupId>local</groupId>
      <artifactId>checkstyle</artifactId>
      <version>10.26.0</version>
      <scope>system</scope>
      <systemPath>${project.basedir}/lib/checkstyle-10.26.0-all.jar</systemPath>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- So you can build your final app -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <source>22</source>
          <target>22</target>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>